[project]
name = "tctk"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = ""}]
license = "Apache-2.0"
requires-python = ">=3.14"
classifiers = []
dependencies = [
    "asyncclick",
    "emoji>=2.15.0",
    "polars>=1.8.2",
    "pydash>=8.0.6",
    "python-box[all]>=7.4.1",
    "python-json-logger>=4.0.0",
    "psycopg[binary]>=3.1",
    "pyyaml",
    "twitchapi>=4.5.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "click>=8.3.1",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
tctk = "tctk.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
test = ["pytest"]
